# vector_dash

./: .gitmodules  Cargo.toml
crates/builder_with/: Cargo.toml
crates/builder_with/src/: lib.rs
crates/builder_with/tests/: test.rs
src/: app.rs  entities.rs  game.rs  lib.rs
src/cfg/: mod.rs
src/cfg/app/: mod.rs
src/cfg/entities/: ground.rs  mod.rs  player.rs  sharp.rs
src/cfg/game/: mod.rs
src/entities/: grid.rs  player.rs  spike.rs
src/entities/ground/: mod.rs
src/entities/player/: controls.rs  event.rs  state.rs
src/game/: common.rs
src/ui/: mod.rs
